// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Page Default 1`] = `
Array [
  <div
    id="root"
  >
    <section
      className="c-page"
    >
      <header
        className="c-page__header"
      />
      <div
        className="c-page__content"
      >
        <div>
          Default page component
        </div>
      </div>
    </section>
  </div>,
  <div
    id="modal-root"
  />,
]
`;

exports[`Storyshots components/Page With Header 1`] = `
Array [
  <div
    id="root"
  >
    <section
      className="c-page"
    >
      <header
        className="c-page__header"
      >
        <div
          className="c-header"
        >
          <p
            className="c-header__page-name"
          >
            Page Name
          </p>
          <h1
            className="c-header__title"
          >
            Page title
          </h1>
        </div>
      </header>
      <div
        className="c-page__content"
      >
        <div>
          Default page component
        </div>
      </div>
    </section>
  </div>,
  <div
    id="modal-root"
  />,
]
`;
